--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 				</div>
 				<div class="elementor-element elementor-element-4239d26 elementor-widget elementor-widget-heading" data-id="4239d26" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<span class="elementor-heading-title elementor-size-default">Founder</span>		</div>
+			<span class="elementor-heading-title elementor-size-default"></span>		</div>
 				</div>
 					</div>
 		</div>
@@ -856,7 +856,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 				</div>
 				<div class="elementor-element elementor-element-cad823d elementor-widget elementor-widget-heading" data-id="cad823d" data-element_type="widget" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<span class="elementor-heading-title elementor-size-default">Marketing</span>		</div>
+			<span class="elementor-heading-title elementor-size-default"></span>		</div>
 				</div>
 					</div>
 		</div>
