--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@ loftloaderProInsertStyle( 'loftloader-pro-progress-percentage-style', percentage
 			<div class="elementor-widget-wrap elementor-element-populated">
 								<div class="elementor-element elementor-element-cc22ca1 elementor-invisible elementor-widget elementor-widget-heading" data-id="cc22ca1" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;zoomIn&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
-			<h2 class="elementor-heading-title elementor-size-default">Our Team</h2>		</div>
+			<h2 class="elementor-heading-title elementor-size-default">SOCIALS</h2>		</div>
 				</div>
 				<div class="elementor-element elementor-element-bb0b83e elementor-widget elementor-widget-text-editor" data-id="bb0b83e" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
